--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.va_application_android.MenuActivity"
+            android:name="com.example.va_application_android.VueMenuActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
               <activity
-            android:name="com.example.va_application_android.ListeBonPlan"
+            android:name="com.example.va_application_android.VueListeBonPlan"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
             <intent-filter>
@@ -50,11 +50,20 @@
             </intent-filter>
         </activity>
          <activity
-            android:name="com.example.va_application_android.ListeActualites"
+            android:name="com.example.va_application_android.VueListeActualites"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="com.example.va_application_android.LISTEACTUALITES" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+                 <activity
+            android:name="com.example.va_application_android.VueInfo"
+            android:label="@string/app_name"
+            android:screenOrientation="landscape" >
+            <intent-filter>
+                <action android:name="com.example.va_application_android.VUEINFO" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
