--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,17 +12,28 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+       >
+        
+        
+        
+        
+        
         <activity
             android:name="com.example.va_application_android.VueMenuActivity"
-            android:label="@string/app_name" >
+     
+            android:screenOrientation="landscape" 
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-              <activity
+        
+        
+        
+        <activity
             android:name="com.example.va_application_android.VueListeBonPlan"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
@@ -30,7 +41,14 @@
                 <action android:name="com.example.va_application_android.LISTEBONPLAN" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        
+        
         </activity>
+        
+              
+              
+              
+              
               <activity
             android:name="com.example.va_application_android.VueCartePoi"
             android:label="@string/app_name"
@@ -40,6 +58,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
+              
+              
+              
            <activity
             android:name="com.example.va_application_android.VueRechercherPoi"
             android:label="@string/app_name"
@@ -49,6 +71,10 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
+           
+           
+           
          <activity
             android:name="com.example.va_application_android.VueListeActualites"
             android:label="@string/app_name"
@@ -58,15 +84,24 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-                 <activity
+        
+         
+         
+         
+         <activity
             android:name="com.example.va_application_android.VueInfo"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="landscape" 
+             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="com.example.va_application_android.VUEINFO" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        
+         
+         
+         
     </application>
 
 </manifest>
